<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_test"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_title_1"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:textStyle="bold"
        android:background="@drawable/button_style"/>
    <Button
        android:id="@+id/btn_help"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_title_2"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:background="@drawable/button_style"/>
    <Button
        android:id="@+id/btn_source"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_title_3"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:background="@drawable/button_style"/>
    <Button
        android:id="@+id/btn_about"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_title_4"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:background="@drawable/button_style"/>

    <ImageView
        android:id="@+id/img"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>