<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="7"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_13"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:fontFamily="@font/iran_sans_bold"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary"/>
        <TextView
            android:id="@+id/txt_ques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:textColor="#6514b6"
            android:textSize="20sp"
            android:fontFamily="@font/iran_sans_bold"
            android:layout_gravity="center"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/txt_Goz1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/w"
                android:textColor="#150d1d"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/textviewsstyle"
                android:onClick="txts_click"
                android:layout_margin="8dp"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp">
            <TextView
                android:id="@+id/txt_Goz2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/h"
                android:textColor="#150d1d"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/textviewsstyle"
                android:onClick="txts_click"
                android:layout_margin="8dp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp">
            <TextView
                android:id="@+id/txt_Goz3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/p"
                android:textColor="#150d1d"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/textviewsstyle"
                android:onClick="txts_click"
                android:layout_margin="8dp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp">
            <TextView
                android:id="@+id/txt_Goz4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/k"
                android:textColor="#150d1d"
                android:textSize="16sp"
                android:background="@drawable/textviewsstyle"
                android:gravity="center"
                android:onClick="txts_click"
                android:layout_margin="8dp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp">
            <TextView
                android:id="@+id/txt_Goz5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/n"
                android:textColor="#150d1d"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/textviewsstyle"
                android:onClick="txts_click"
                android:layout_margin="8dp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
    </LinearLayout>






</LinearLayout>
